--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">peertalk</string>
+    <string name="app_name">PeerTalk</string>
+    <string name="home">http://itforone.co.kr/~peertalk/</string>
+    <string name="personal">http://itforone.co.kr/~peertalk/bbs/per_contact.php</string>
+    <string name="login">http://itforone.co.kr/~peertalk/bbs/login.php</string>
 </resources>
